--- a/pages/posts/post.wxss
+++ b/pages/posts/post.wxss
@@ -1,3 +1,6 @@
+/* 上面为引用模板样式 */
+@import "./post-item/post-item-template.wxss";
+
 swiper{
     width:100%;
     height:600rpx;
@@ -7,32 +10,3 @@ swiper image{
     height:600rpx
 }
 
-.post-container{
-    display: flex;
-    flex-direction: column;
-    margin-top: 20rpx;
-    margin-bottom: 40rpx;
-    background-color: #fff;
-    border-bottom: 1px solid #ededed;
-    border-top: 1px solid #ededed;
-    padding-bottom: 5px;
-}
-.post-author-date{
-    margin:10rpx 0rpx 20rpx 10rpx;
-}
-.post-author{
-    width:60rpx;
-    height:60rpx;
-    border-radius: 50%;
-    vertical-align: middle;
-}
-.post-date{
-    margin-left: 20rpx;
-    vertical-align: middle;
-    margin-bottom: 5px;
-    font-size: 26rpx;
-}
-.post-title{
-    font-size: 34rpx;
-    font-weight: 600;
-}
