--- a/pages/posts/postDetail/postdetail.wxml
+++ b/pages/posts/postDetail/postdetail.wxml
@@ -1,12 +1,13 @@
 <view class="container">
-    <image src="/image/img4.jpg" class="header-image"></image>
+    <image src="{{postData.headerImg}}" class="header-image"></image>
+    <image src="/image/1.jpg" class="audio"></image>
     <view class="author-data">
-        <image src="/image/img1.jpg" class="avatar"></image>
-        <text class="authorname">胡歌</text>
+        <image src="{{postData.author_img}}" class="avatar"></image>
+        <text class="authorname">{{postData.author}}</text>
         <text class="const-text">发表与</text>
-        <text class="date">三天前</text>
+        <text class="date">{{postData.dataTime}}</text>
     </view>
-    <text class="title">文章标题</text>
+    <text class="title">{{postData.title}}</text>
     <view class="tool">
         <view class="circle">
             <image src="/image/1.jpg"></image>
@@ -17,6 +18,6 @@
     </view>
 
     <text class="detail">
-    文章正文
+        {{postData.detail}}
     </text>
 </view>
