--- a/pages/posts/postDetail/postdetail.wxss
+++ b/pages/posts/postDetail/postdetail.wxss
@@ -78,3 +78,13 @@
     letter-spacing: 2px;
     font-size:24rpx;
 }
+.audio{
+    width:102rpx;
+    height: 110rpx;
+    position:absolute;
+    left:50%;
+    margin-left:-51rpx;
+    top:180rpx;
+    opacity: 0.6;
+    border-radius: 50%;
+}
