--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -8,7 +8,7 @@ text 文本标签 在手机上可以长按选中  text 可以嵌套
   catch 组织了冒泡事件
  -->
 <view class="container">
-    <image class="user_avator" src="/image/1.jpg"></image>
+    <image class="user_avator" src="/image/icon-logo.png"></image>
     <text class="user_name"><text style="color:red">hello</text>,12月</text>
     <view class="moto_container" bindtap="onTap">
         <text class="moto">开启小程序之路</text>
