--- a/pages/posts/post.wxml
+++ b/pages/posts/post.wxml
@@ -4,15 +4,15 @@
 
 <view>
 
-    <swiper indicator-dots="true" autoplay="true" interval="5000" circular="true">
+    <swiper catchtap='onSwiperTap' indicator-dots="true" autoplay="true" interval="5000" circular="true">
         <swiper-item>
-            <image src="/image/img-bg.png"></image>
+            <image src="/image/img-bg.png" data-postId="0" ></image>
         </swiper-item>
         <swiper-item>
-            <image src="/image/img-bg.png"></image>
+            <image src="/image/img-bg.png" data-postId="1" ></image>
         </swiper-item>
         <swiper-item>
-            <image src="/image/img-bg.png"></image>
+            <image src="/image/img-bg.png" data-postId="2" ></image>
         </swiper-item>
     </swiper>
 
@@ -23,7 +23,7 @@
     <block wx:for="{{posts_key}}" wx:for-item="item" wx:for-index="index" wx:key="index">
         <!-- 自定义属性 data- + 自定义名字 -->
         <view catchtap='onPostTap' data-postid="{{item.postId}}" data-post-name="123">
-        
+
             <!-- template   自定义模板只能为wxml、wxss 并不是 自定义组件  ...展开对象-->
             <template is="postItem" data="{{...item}}"></template>
 
