--- a/pages/movies/movies.wxss
+++ b/pages/movies/movies.wxss
@@ -1,9 +1,42 @@
 @import "./movie-list/movie-list.wxss";
+@import "./movie-grid/movie-grid.wxss";
 
 .container{
     background:#f2f2f2;
 }
 .movies-template{
     margin-bottom:30rpx;
+}
+.search{
+    background:#f2f2f2;
+    height:80rpx;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.search-img{
+    height: 26rpx;
+    width: 26rpx;
+    margin: auto 0 auto 20rpx;
+}
+.placeholder{
+    font-size: 14rpx;
+    color:#d1d1d1;
+    margin-left:20rpx;
+}
+.search input{
+    height: 100%;
+    width:600rpx;
+    margin-left:20px;
+    font-size: 28rpx;
+}
+.search-pannel{
+    position:absolute;
+    top:80rpx;
+}
+.close{
+    height: 30rpx;
+    width: 30rpx;
+    margin: auto 0 auto 10rpx;
 }
 
