--- a/pages/movies/movie-grid/movie-grid.wxml
+++ b/pages/movies/movie-grid/movie-grid.wxml
@@ -2,12 +2,12 @@
 <import src="../movie/movie.wxml" />
 
 <template name="movieGridTemplate">
-    <scroll-view class="grid-container" scroll-y="true" scroll-x="false" bindscrolltolower="onscrolltolower" >
+    <view class="grid-container" >
 
         <block wx:for="{{movies}}" wx:for-item="movie" wx:key="index">
             <view class="single-view-container">
                 <template is="movieTemplate" data="{{...movie}}"></template>
             </view>
         </block>
-    </scroll-view>
+    </view>
 </template>
