--- a/pages/movies/movies.wxml
+++ b/pages/movies/movies.wxml
@@ -1,6 +1,13 @@
 <import src="./movie-list/movie-list.wxml" />
+<import src="./movie-grid/movie-grid.wxml" />
 
-<view class="container">
+<view class="search">
+    <icon type="search" class="search-img" size="13" color="#405f80"></icon>
+    <input type="text" placeholder="红海行动" placeholder-class="placeholder" bindfocus="onBindFocus" bindinput="onBindInput"  bindblur="onBindBlur" bindconfirm="onBindConfirm" value="{{inputText}}"/>
+    <image wx:if="{{searchPannelShow}}" src="/image/xx.png" class="close" bindtap="onCancelImgTap"></image>
+</view>
+
+<view class="container" wx:if="{{containerShow}}">
     <view class="movies-template">
         <template is="movieListTemplate" data="{{...inTheaters}}"></template>
     </view>
@@ -10,4 +17,8 @@
     <view class="movies-template">
         <template is="movieListTemplate" data="{{...top250}}"></template>
     </view>
+</view>
+
+<view class="search-pannel" wx:if="{{searchPannelShow}}">
+    <template is="movieGridTemplate" data="{{...searchResult}}"></template>
 </view>
